Modena CSS fix for RT-29830 - Pagination: left and right arrow buttons - arrow is not centered

--- a/javafx-ui-controls/src/com/sun/javafx/scene/control/skin/modena/modena.css
+++ b/javafx-ui-controls/src/com/sun/javafx/scene/control/skin/modena/modena.css
@@ -2065,12 +2065,12 @@ is being used to size a border should also be in pixels.
 .pagination > .pagination-control > .control-box > .left-arrow-button {
     -fx-background-radius: 3 0 0 3, 3 0 0 3, 2 0 0 2, 1 0 0 1;
     -fx-background-insets: 0 0 -1 5, 0 0 0 5, 1 1 1 6, 2 2 2 7;
-    -fx-padding: 0.166667em 0em 0.25em 0.9em;
+    -fx-padding: 0em 0.417em 0em 0.833em; /* 0 5 0 10 */
 }
 .pagination > .pagination-control > .control-box > .right-arrow-button {
     -fx-background-radius: 0 3 3 0, 0 3 3 0, 0 2 2 0, 0 1 1 0;
     -fx-background-insets: 0 5 -1 0, 0 5 0 0, 1 6 1 1, 2 7 2 2;
-    -fx-padding: 0.166667em 0em 0.25em 0.4em;
+    -fx-padding: 0em 0.75em 0em 0.417em; /* 0 9 0 5 */
 }
 .pagination > .pagination-control .left-arrow {
     -fx-background-color: -fx-mark-highlight-color, -fx-mark-color;
@@ -2088,7 +2088,7 @@ is being used to size a border should also be in pixels.
 }
 .pagination > .pagination-control > .control-box > .bullet-button {   
    -fx-background-radius: 0, 4em, 4em, 4em, 4em;
-   -fx-padding: 0.333em;  
+   -fx-padding: 0.333em;
    -fx-background-color: transparent, -fx-outer-border, -fx-inner-border, -fx-body-color;
    -fx-background-insets: 0, 5,  6,  7;
 }
@@ -2102,12 +2102,12 @@ is being used to size a border should also be in pixels.
 .pagination.bullet > .pagination-control > .control-box > .left-arrow-button {
     -fx-background-radius: 4em;
     -fx-background-insets: 0, 1, 2;
-    -fx-padding: 0 0 0 0.667em; /* 0 0 0 8 */
+    -fx-padding: 0em 0.25em 0em 0.083em; /* 0 3 0 1 */
 } 
 .pagination.bullet > .pagination-control > .control-box > .right-arrow-button {
     -fx-background-radius: 4em;
     -fx-background-insets: 0, 1, 2;
-    -fx-padding: 0 0 0 0.833em; /* 0 0 0 10 */
+    -fx-padding: 0em 0.083em 0em 0.25em; /* 0 1 0 3 */
 }
 .pagination > .pagination-control > .control-box > .number-button {
     -fx-background-radius: 0;
